# temp-btp

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  app.py  app1.py  app2.py  balanced_diagnosis_3.csv  best_random_forest_model.pkl  best_random_forest_model_FULL.pkl  clinical-data.ipynb  config.toml  lib.py  main.py  model_metadata.pkl  processed_data_apoeres_3dec25.csv  pyproject.toml  requirements.txt
src/: __init__.py  config.py  model.py  ui_components.py  utils.py
